--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 name: release
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - '*'
 
 jobs:
   publish:
@@ -12,7 +13,6 @@ jobs:
         with:
           node-version: "20"
       - run: npm ci
-      - run: npm test
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
