--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,7 @@
 name: release
 on:
-  push:
-    branches:
-      - '*'
+  release:
+    types: [created]
 
 jobs:
   publish:
@@ -17,4 +16,3 @@ jobs:
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          dry-run: true
