--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "license": "MIT",
   "homepage": "https://github.com/HenrikBuesing/ui-library/tree/main#README.md",
   "bugs": "https://github.com/HenrikBuesing/ui-library/issues",
-  "repository": "github:HenrikBuesing/ui-library",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HenrikBuesing/ui-library.git"
+  },
   "peerDependencies": {
     "react": "^18.0.0"
   },
