--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "jsxFragmentFactory": "",
     "allowSyntheticDefaultImports": true,
     "declaration": true,
+    "baseUrl": "./src",
   },
   "include": [
     "./src/**/*"
