--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "name": "@hbuesing/ui-library",
   "version": "1.4.4",
   "description": "Collection of reusable ui components for react based applications",
-  "keywords": [
-    "react",
-    "react-component",
-    "ui"
-  ],
   "source": "src/index.ts",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/index.js",
@@ -22,7 +18,6 @@
       "require": "./dist/index.css"
     }
   },
-  "types": "dist/index.d.ts",
   "files": [
     "dist/*"
   ],
@@ -58,5 +53,11 @@
     "sass": "^1.77.6",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.14.1"
-  }
+  },
+  "keywords": [
+    "next",
+    "react",
+    "ui",
+    "ui-library"
+  ]
 }
