restructures repo as monorepo and init docusaurus for docs

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,9 @@
 name: linting
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [
-      "main",
-      "v*"
-    ]
+    branches: ["main", "v*"]
+    paths:
+      - packages
 jobs:
   ESLint:
     runs-on: ubuntu-latest
@@ -22,7 +19,7 @@ jobs:
         run: npm install
       - uses: int128/comment-action@v1
         with:
-          run: npm run lint:prod
+          run: npm run lint-nw:library
           update-if-exists: append
           post-on-failure: |
             ## :x: ESLint check failed:
