--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,20 @@ on:
       - main
 
 jobs:
-  publish:
+  ESLint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: install
+        run: npm install
+      - name: linting
+        run: npm run lint-nw
+
+  publish_npm:
+    needs: ESLint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
