--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,8 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "typecheck": "selint src docs"
+    "lint": "eslint src",
+    "lint:nw": "eslint src --max-warnings 0"
   },
   "dependencies": {
     "@docusaurus/core": "3.4.0",
