--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     "@docusaurus/theme-live-codeblock": "^3.4.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-sass": "^0.2.5",
     "prism-react-renderer": "^2.3.0",
     "react-dom": "^18.0.0"
   },
