--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
   "name": "root",
   "private": true,
-  "author": "Henrik Buesing",
   "license": "MIT",
   "workspaces": [
     "packages",
     "website"
   ],
   "scripts": {
-    "clean:library": "npm run clean --workspace=packages",
     "lint:library": "npm run lint --workspace=packages",
+    "lint:docs": "npm run lint --workspace=website",
     "lint-nw:library": "npm run lint:nw --workspace=packages",
+    "lint-nw:docs": "npm run lint:nw --workspace=website",
     "lint-nw": "npm run lint:nw --workspaces",
-    "build:library": "npm run build --workspace=packages",
+
+    "clean:library": "npm run clean --workspace=packages",
+    "clear:docs": "npm run clear --workspace=website",
+
     "dev:library": "npm run dev --workspace=packages",
+    "dev:docs": "npm run start --workspace=website",
+
+    "build:library": "npm run build --workspace=packages",
+    "build:docs": "npm run build --workspace=website",
+
     "stats:library": "npm run stats --workspace=packages"
   },
   "peerDependencies": {
