--- a/packages/package.json
+++ b/packages/package.json
@@ -37,6 +37,9 @@
     "url": "https://github.com/HenrikBuesing/ui-library.git",
     "directory": "ui-library"
   },
+  "peerDependencies": {
+    "react": "^18.0.0"
+  },
   "devDependencies": {
     "microbundle": "^0.15.1",
     "rimraf": "^5.0.7"
