--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 
     "build:library": "npm run build --workspace=packages",
     "build:docs": "npm run build --workspace=website",
+    "build:docs-uil": "npm run build:uil --workspace=packages",
 
     "stats:library": "npm run stats --workspace=packages"
   },
