--- a/website/package.json
+++ b/website/package.json
@@ -11,7 +11,7 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "lint": "eslint src",
-    "lint:nw": "eslint src --max-warnings 0"
+    "lint:nw": "eslint src --max-warnings 0 --ignore-pattern src/uil-bundle/*"
   },
   "dependencies": {
     "@docusaurus/core": "3.4.0",
