--- a/packages/package.json
+++ b/packages/package.json
@@ -4,11 +4,9 @@
   "version": "3.0.0",
   "description": "Collection of reusable ui components for react based applications",
   "source": "src/index.ts",
-  "main": "dist/index.js",
   "module": "dist/index.mjs",
   "exports": {
     ".": {
-      "require": "./dist/index.js",
       "types": "./dist/index.d.ts",
       "default": "./dist/index.modern.mjs"
     },
@@ -17,14 +15,11 @@
       "require": "./dist/index.css"
     }
   },
-  "files": [
-    "dist/*"
-  ],
   "scripts": {
     "clean": "rimraf ./dist && mkdir dist",
     "lint": "eslint src",
     "lint:nw": "eslint src --max-warnings 0",
-    "build": "microbundle build --output ./dist --generateTypes true --jsx react --globals react/jsx-runtime=jsxRuntime",
+    "build": "microbundle build --output ./dist --generateTypes true --format modern --jsx react --globals react/jsx-runtime=jsxRuntime",
     "build:uil": "microbundle build --output ../website/src/uil-bundle --generateTypes true --format modern --jsx react --globals react/jsx-runtime=jsxRuntime",
     "dev": "microbundle -w --jsx react",
     "stats": "microbundle --visualize"
