*updates npm scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint-nw:library": "npm run lint:nw --workspace=packages",
 
     "clean:library": "npm run clean --workspace=packages",
-    "clear:docs": "npm run clear --workspace=website",
+    "clean:docs": "npm run clear --workspace=website",
 
     "dev:library": "npm run dev --workspace=packages",
     "dev:docs": "npm run start --workspace=website",
