--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -4,6 +4,7 @@
     "sourceMap": true,
     "module": "ESNext",
     "target": "ESNext",
+    "moduleResolution": "Node",
     "jsx": "react",
     "jsxFactory": "",
     "jsxFragmentFactory": "",
