--- a/website/docs/tags.yml
+++ b/website/docs/tags.yml
@@ -1,7 +1,7 @@
 getting-started:
   label: 'Getting started'
   permalink: '/getting-started'
-  description: 'Install and setup the library'
+  description: 'Getting started with the library'
 
 components:
   label: 'Components'
