*sets environment for docs deployment action

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -10,6 +10,7 @@ on:
       - website/**
 jobs:
   docs-deployment-preview:
+    environment: Preview
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
