--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,7 @@ jobs:
 
   docs-deployment-production:
     needs: publish_npm_package
+    environment: Production
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
