--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,7 @@ jobs:
           package: packages
           dry-run: true
 
+  #TODO move docs release into separate workflow
   docs-deployment-production:
     needs: publish_npm_package
     environment: Production
