--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: install
-        run: npm install
-      - name: linting
+      - name: Install dependencies
+        run: npm ci
+      - name: lint src directory
         run: npm run lint-nw:library
 
-  publish_npm_package:
+  publish:
+    name: Publish npm package
     needs: ESLint
     runs-on: ubuntu-latest
     steps:
@@ -27,8 +28,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - run: npm ci
-      - run: npm run build:library
+      - name: Install dependencies
+        run: npm ci
+      - name: Build package
+        run: npm run build:library
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
