--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,10 @@
 name: Deploy docs
-on: workflow_dispatch
+on:
+  release:
+    types: [created]
+  push:
+    branches-ignore:
+      - main
 
 jobs:
   docs-deployment-production:
@@ -7,7 +12,14 @@ jobs:
     environment: Production
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Get changed files in the .github folder
+        id: changed-files-specific
+        uses: tj-actions/changed-files@v44
+        with:
+          files: .website/**
+
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
+      - uses: actions/checkout@v4
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel Environment Information
@@ -16,3 +28,6 @@ jobs:
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+
+        if: steps.changed-files-specific.outputs.any_changed == 'false'
+      - run: echo No changes detected, skipping docs deployment
