--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Deploy docs
 on:
-  release:
-    types: [created]
+  workflow_dispatch:
   push:
-    branches-ignore:
-      - main
+    tags: ["v*"]
+    paths:
+      - website/**
 
 jobs:
   docs-deployment-production:
@@ -12,13 +12,6 @@ jobs:
     environment: Production
     runs-on: ubuntu-latest
     steps:
-      - name: Get changed files in the .github folder
-        id: changed-files-specific
-        uses: tj-actions/changed-files@v44
-        with:
-          files: .website/**
-
-        if: steps.changed-files-specific.outputs.any_changed == 'true'
       - uses: actions/checkout@v4
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
