--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -8,11 +8,26 @@ on:
       - main
     paths:
       - website/**
+      - .github/workflows/preview.yml
+  pull_request:
+    branches: ["main", "v*"]
+    paths:
+      - website/**
+      - .github/workflows/preview.yml
 jobs:
   docs-deployment-preview:
     environment: Preview
     runs-on: ubuntu-latest
     steps:
+      - if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' }}
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            Changes in website directory detected
+            Generating preview docs
+          comment_tag: docs-preview
+          mode: 'recreate'
+
       - uses: actions/checkout@v4
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
