--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -13,7 +13,6 @@ on:
     branches: ["main", "v*"]
     paths:
       - website/**
-      - .github/workflows/preview.yml
 jobs:
   docs-deployment-preview:
     environment: Preview
@@ -23,8 +22,8 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            Changes in website directory detected
-            Generating preview docs
+            ## preview deployment
+            File change detected in website dir, generating new preview deployment
           comment_tag: docs-preview
           mode: 'recreate'
 
