--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -13,12 +13,13 @@ on:
     branches: ["main", "v*"]
     paths:
       - website/**
+      - .github/workflows/preview.yml
 jobs:
   docs-deployment-preview:
     environment: Preview
     runs-on: ubuntu-latest
     steps:
-      - if: ${{ github.event_name == 'pull_request' && github.event.action == 'opened' }}
+      - if: ${{ github.event_name == 'pull_request' }}
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
