--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -18,6 +18,8 @@ jobs:
   docs-deployment-preview:
     environment: Preview
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - if: ${{ github.event_name == 'pull_request' }}
         uses: thollander/actions-comment-pull-request@v2
