--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-      - name: install
-        run: npm install
-      - name: linting
+      - name: Install dependencies
+        run: npm ci
+      - name: lint src directory
         run: npm run lint-nw:library
 
-  publish_npm_package:
+  publish_package:
+    name: Publish npm package
     needs: ESLint
     runs-on: ubuntu-latest
     steps:
@@ -27,27 +28,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - run: npm ci
-      - run: npm run build:library
+      - name: Install dependencies
+        run: npm ci
+      - name: Build package
+        run: npm run build:library
       - uses: JS-DevTools/npm-publish@v3
         with:
           token: ${{ secrets.NPM_TOKEN }}
           access: public
           package: packages
-          dry-run: true
-
-  #TODO move docs release into separate workflow
-  docs-deployment-production:
-    needs: publish_npm_package
-    environment: Production
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-      - name: Pull Vercel Environment Information
-        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Build Project Artifacts
-        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-      - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
+          dry-run: false
