*disabled workflows for draft prs

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -8,6 +8,11 @@ on:
     paths:
       - website/**
       - .github/workflows/preview.yml
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 jobs:
   docs-deployment-preview:
     if: github.event.pull_request.draft == false
