--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,6 +2,11 @@ name: linting
 on:
   pull_request:
     branches: ["main", "v*"]
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 jobs:
   ESLint:
     if: github.event.pull_request.draft == false
