--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
-    "types": ["docusaurus-plugin-sass"]
+    "types": ["docusaurus-plugin-sass"],
+    "strictNullChecks": true
   },
   "exclude": ["src/uil-bundle"]
 }
