*fixes npm package build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ env:
 on:
   release:
     types: [created]
+  push:
+    branches-ignore:
+      - main
 
 jobs:
   ESLint:
@@ -37,4 +40,4 @@ jobs:
           token: ${{ secrets.NPM_TOKEN }}
           access: public
           package: packages
-          dry-run: false
+          dry-run: true
