--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: linting
 on:
   pull_request:
-    branches: ["main", "v*"]
+    branches: [ "main" ]
     types:
       - opened
       - reopened
