*adds missing type declarations

--- a/packages/package.json
+++ b/packages/package.json
@@ -1,11 +1,14 @@
 {
   "private": false,
   "name": "@hbuesing/ui-library",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "Collection of reusable ui components for react based applications",
   "source": "src/index.ts",
   "type": "module",
-  "exports": "./dist/bundle.js",
+  "exports": {
+    "default": "./dist/bundle.js",
+    "types": "./dist/index.d.ts"
+  },
   "files": [
     "dist/*"
   ],
