--- a/packages/package.json
+++ b/packages/package.json
@@ -5,10 +5,8 @@
   "description": "Collection of reusable ui components for react based applications",
   "source": "src/index.ts",
   "type": "module",
-  "exports": {
-    "default": "./dist/bundle.js",
-    "types": "./dist/index.d.ts"
-  },
+  "types": "./dist/index.d.ts",
+  "exports": "./dist/bundle.js",
   "files": [
     "dist/*"
   ],
