--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -1,4 +1,4 @@
-name: release
+name: beta-release
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
