--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@hbuesing/ui-library",
-  "version": "5.0.0-beta.2",
+  "version": "5.0.0-beta.3",
   "description": "Collection of reusable ui components for react based applications",
   "source": "src/index.ts",
   "type": "module",
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "esbuild": "0.24.0",
+    "esbuild-inline-sass": "^0.4.4",
     "esbuild-sass-plugin": "^3.3.1",
     "microbundle": "^0.15.1",
     "rimraf": "^6.0.1"
