--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@hbuesing/ui-library",
-  "version": "5.0.0-beta.7",
+  "version": "5.0.0-beta.8",
   "description": "Collection of reusable ui components for react based applications",
   "source": "src/index.ts",
   "type": "module",
@@ -14,12 +14,10 @@
     "lint": "eslint src",
     "lint:nw": "eslint src --max-warnings 0",
     "build": "node ./esbuild.js",
-    "postbuild": "tsc --emitDeclarationOnly --project tsconfig.build.json",
-    "build:uil": "microbundle build --output ../website/src/uil-bundle/bundle.js --generateTypes true --format modern --jsx react --globals react/jsx-runtime=jsxRuntime --css inline",
-    "dev": "microbundle -w --output ./dist/bundle.js --generateTypes true --format modern --jsx react --globals react/jsx-runtime=jsxRuntime --css inline"
+    "postbuild": "tsc --emitDeclarationOnly --project tsconfig.build.json"
   },
   "license": "MIT",
-  "homepage": "https://hb-ui-library-docs.vercel.app",
+  "homepage": "https://www.ui-library.hbsng.com",
   "bugs": "https://github.com/HenrikBuesing/ui-library/issues",
   "repository": {
     "type": "git",
