--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,14 +1,11 @@
 {
   "compilerOptions": {
     "outDir": "./dist/",
-    "sourceMap": true,
     "module": "ESNext",
     "target": "ESNext",
     "moduleResolution": "Node",
     "skipLibCheck": true,
     "jsx": "react",
-    "jsxFactory": "",
-    "jsxFragmentFactory": "",
     "esModuleInterop": true,
     "declaration": true,
     "baseUrl": "./src"
@@ -19,6 +16,7 @@
     "./src/index.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ]
 }
