*adds esbuild watch script

--- a/website/package.json
+++ b/website/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "docusaurus start",
     "build:uil": "node esbuild.mjs",
+    "build:uil-watch": "node esbuildWatch.mjs",
     "postbuild:uil": "tsc --emitDeclarationOnly --project tsconfig.build.json",
     "build": "npm run build:uil && docusaurus build",
     "swizzle": "docusaurus swizzle",
