*updates docs for icon (formerly svg) component

--- a/website/docs/tags.yml
+++ b/website/docs/tags.yml
@@ -22,10 +22,10 @@ checkbox:
   permalink: '/components/checkbox'
   description: 'Checkbox component'
 
-images:
-  label: 'Images'
-  permalink: '/components/images'
-  description: 'Image components'
+icon:
+  label: 'Icon'
+  permalink: '/components/icon'
+  description: 'Icon component'
 
 modal:
   label: 'Modal'
