--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.3.1",
     "sass": "^1.80.4",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0"
+    "typescript-eslint": "^8.11.0",
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
