--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -8,12 +8,14 @@
     "jsx": "react",
     "esModuleInterop": true,
     "declaration": true,
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "include": [
     "./src/components/**/index.ts",
     "./src/hooks/**/index.ts",
-    "./src/index.ts"
+    "./src/index.ts",
+    "./src/globals.d.ts"
   ],
   "exclude": [
     "node_modules",
