--- a/website/package.json
+++ b/website/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start": "docusaurus start",
-    "build:uil": "node esbuild.mjs",
+    "build:uil": "NODE_ENV=production node esbuild.mjs",
     "postbuild:uil": "tsc --emitDeclarationOnly --project tsconfig.build.json",
-    "build:uil-watch": "node esbuild.watch.mjs",
+    "build:uil-watch": "NODE_ENV=dev node esbuild.mjs",
     "build": "npm run build:uil && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "clear": "docusaurus clear",
