--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,15 +1,8 @@
 {
+  "extends": "../tsconfig-base.json",
   "compilerOptions": {
-    "outDir": "./dist/",
-    "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "Node",
-    "skipLibCheck": true,
-    "jsx": "react",
-    "esModuleInterop": true,
-    "declaration": true,
     "baseUrl": "./src",
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "outDir": "./dist/"
   },
   "include": [
     "./src/components/**/index.ts",
