* adds path alias for common dir

--- a/website/tsconfig.build.json
+++ b/website/tsconfig.build.json
@@ -2,7 +2,10 @@
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
     "baseUrl": "../packages/src",
-    "outDir": "./src/uil-bundle"
+    "outDir": "./src/uil-bundle",
+    "paths": {
+      "@common/*": ["./components/common/*"]
+    }
   },
   "include": [
     "../packages/src/components/**/index.ts",
