--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -2,7 +2,10 @@
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
     "baseUrl": "./src",
-    "outDir": "./dist/"
+    "outDir": "./dist/",
+    "paths": {
+      "@common/*": ["./components/common/*"]
+    }
   },
   "include": [
     "./src/**/*"
