--- a/packages/tsconfig.build.json
+++ b/packages/tsconfig.build.json
@@ -1,10 +1,11 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
-    "baseUrl": "./src",
     "outDir": "./dist/",
     "paths": {
-      "@common/*": ["./components/common/*"]
+      "@common/*": ["./src/components/common/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   },
   "include": [
