--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "type": "module",
   "scripts": {
+    "test": "npm run test --workspace=packages",
     "lint:library": "npm run lint --workspace=packages",
     "lint-nw:library": "npm run lint:nw --workspace=packages",
     "clean:docs": "npm run clear --workspace=website",
