--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -16,6 +16,7 @@
     "target": "ESNext",
     "useUnknownInCatchVariables": true,
     "verbatimModuleSyntax": true,
+    "isolatedModules": true,
     "plugins": [
       {
         "name": "typescript-plugin-css-modules",
