--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,23 @@ jobs:
       - name: lint src directory
         run: npm run lint-nw:library
 
+  Test:
+    name: Run component tests
+    needs: ESLint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install dependencies
+        run: npm ci
+      - name: run tests
+        run: npm run test
+
   publish_package:
     name: Publish npm package
-    needs: ESLint
+    needs: Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
