--- a/packages/package.json
+++ b/packages/package.json
@@ -31,11 +31,12 @@
     "directory": "ui-library"
   },
   "peerDependencies": {
-    "react": "^18.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.1",
-    "@vitest/coverage-v8": "^2.1.6",
-    "vitest": "^2.1.6"
+    "@testing-library/react": "^16.2.0",
+    "@vitest/coverage-v8": "^3.0.4",
+    "vitest": "^3.0.4"
   }
 }
