* small docs fixes

--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "types": ["docusaurus-plugin-sass"],
     "strictNullChecks": true,
+    "baseUrl": ".",
     "paths": {
       "@site/*": ["./*"],
       "@common/*": ["../packages/src/components/common/*"],
