--- a/packages/package.json
+++ b/packages/package.json
@@ -6,7 +6,10 @@
   "source": "src/index.ts",
   "type": "module",
   "types": "./dist/index.d.ts",
-  "exports": "./dist/index.js",
+  "exports": [
+    "./dist/index.js",
+    "./dist/index.css"
+  ],
   "files": [
     "dist/*"
   ],
