* adds basic doc structure

--- a/docs/package.json
+++ b/docs/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "build:uil": "NODE_ENV=production node esbuild.mjs",
-    "postbuild:uil": "tsc --emitDeclarationOnly --project tsconfig.build.json",
-    "build:uil-watch": "NODE_ENV=dev node esbuild.mjs"
+    "start": "next start"
   },
   "dependencies": {
     "next": "^15.2.0",
@@ -20,7 +17,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.17.19",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4"
   }
 }
