* adds turbo and restructures the repo to fix issues with monorepo setup

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: "monthly"
+      interval: "weekly"
     commit-message:
       prefix: "[dependabot][npm] "
     labels:
