--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: lint src directory
-        run: npm run lint-nw:library
+        run: npm run lint:library
         
   Test:
     name: Run component tests
