--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: lint src directory
-        run: npm run lint-nw:library
+        run: npm run lint:library
 
   Test:
     name: Run component tests
