--- a/docs/package.json
+++ b/docs/package.json
@@ -1,23 +1,17 @@
 {
   "name": "docs",
-  "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
+    "lint": "next lint",
     "dev": "next",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@hbuesing/ui-library": "*",
     "next": "^15.2.0",
     "nextra": "^4.2.13",
-    "nextra-theme-docs": "^4.2.13",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@hbuesing/ui-library": "*"
-  },
-  "devDependencies": {
-    "@types/node": "^20.17.19",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4"
+    "nextra-theme-docs": "^4.2.13"
   }
 }
