--- a/packages/ui-library/package.json
+++ b/packages/ui-library/package.json
@@ -20,13 +20,12 @@
     "dist/*"
   ],
   "scripts": {
-    "lint": "eslint src",
-    "lint:nw": "eslint src --max-warnings 0",
-    "predev": "npx rimraf dist",
-    "dev": "NODE_ENV=dev node esbuild.js",
+    "lint": "eslint src --max-warnings 0",
+    "prebuild:dev": "npx rimraf dist",
+    "build:dev": "NODE_ENV=dev node esbuild.js",
     "build": "NODE_ENV=production node esbuild.js",
-    "postbuild": "npm run build-types",
-    "build-types": "tsc --emitDeclarationOnly --project tsconfig.build.json",
+    "postbuild": "npm run build:types",
+    "build:types": "tsc --emitDeclarationOnly --project tsconfig.build.json",
     "test": "vitest run",
     "test:watch": "vitest -w",
     "test:coverage": "vitest run --coverage"
@@ -46,6 +45,8 @@
   "devDependencies": {
     "@testing-library/react": "^16.2.0",
     "@vitest/coverage-v8": "^3.0.6",
+    "esbuild": "0.25.0",
+    "esbuild-sass-plugin": "^3.3.1",
     "jsdom": "^26.0.0",
     "vitest": "^3.0.6"
   }
